--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -1,3 +1,7 @@
 @import "abstract/variables";
-@import 'bootstrap/scss/bootstrap.scss';
+@import "bootstrap/scss/bootstrap.scss";
 @import "abstract/base";
+
+.btn-wrapper {
+  min-height: 60vh;
+}
